# fnv-gamenative-4gb-patcher

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml
build-authenticode/: .ninja_deps  .ninja_log  CMakeCache.txt  FNVGameNativePatcher  build.ninja  cmake_install.cmake
build-release-check/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
docs/: TECHNICAL_OVERVIEW.md  TESTING.md
src/: main.cpp
tests/: test_synthetic_pe.py
